@@ -1,3 +1,11 @@
+2006-05-26  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf.c (sym_is_global): Return a bfd_boolean.
+	(ignore_section_sym): New function.
+	(elf_map_symbols): Use ignore_section_sym to discard some syms.
+	(_bfd_elf_symbol_from_bfd_symbol): Ensure section belongs to
+	bfd before using elf_section_syms.
+
 2006-05-25  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* config.bfd: (sh-*-linux*): Treat as 64bit target.
